# tactilesensors4

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
msg/: Array1d.msg~  Data4.msg~  Dynamic.msg~  DynamicData.msg~  EulerAngle.msg  EulerAngle.msg~  Gyroscope.msg~  IMUData.msg~  Magnetometer.msg  Quaternion.msg  Quaternion.msg~  Sensor.msg~  Static.msg~  StaticData.msg  StaticData.msg~
src/: Communication.cpp  Communication.h  DataListener4.cpp  Finger.cpp  Finger.h  PollData4.cpp  tactilevision.cpp
srv/: TactileSensors.srv~
