<?xml version="1.0"?>
<package>
<name>tactilesensors4</name>
<version>1.0.0</version>
<description>The "tactilesensors v4" package</description>

  <author email="jean-philippe.roberge@etsmtl.ca">jproberge</author>
  <maintainer email="etienne.roberge.1@ens.etsmtl.ca">eroberge</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  </package>
